[gd_scene load_steps=16 format=3 uid="uid://btsbps07xmdkk"]

[ext_resource type="Texture2D" uid="uid://cpw0wnhq6w6yo" path="res://asset/Vfx/Texture/T_VFX_Glow_1.PNG" id="1_ofqfl"]
[ext_resource type="Script" uid="uid://csfl7rlx78to1" path="res://scripts/Tower/orbit_skill.gd" id="1_vp5ry"]
[ext_resource type="Texture2D" uid="uid://c4u62dfftwjec" path="res://asset/Vfx/Texture/T_flare81.png" id="2_yk8ee"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yk8ee"]
transparency = 1
blend_mode = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
albedo_texture = ExtResource("1_ofqfl")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_vp5ry"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vp5ry"]
transparency = 1
blend_mode = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
albedo_texture = ExtResource("2_yk8ee")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dssvg"]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 0.01
initial_velocity_max = 1.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 0.5

[sub_resource type="QuadMesh" id="QuadMesh_h2ql6"]

[sub_resource type="SphereShape3D" id="SphereShape3D_dssvg"]
radius = 0.36725223

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dssvg"]
transparency = 1
blend_mode = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
albedo_texture = ExtResource("1_ofqfl")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_hovb4"]

[sub_resource type="Animation" id="Animation_v812j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ball:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(3, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ball2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-3, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_h2ql6"]
resource_name = "orbit"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ball:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ball2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-2, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 3.1415927, 0)]
}

[sub_resource type="Animation" id="Animation_vp5ry"]
resource_name = "orbit2"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ball:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ball2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, -2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 3.1415927, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j7aad"]
_data = {
&"RESET": SubResource("Animation_v812j"),
&"orbit": SubResource("Animation_h2ql6"),
&"orbit2": SubResource("Animation_vp5ry")
}

[node name="Rotator" type="Node3D"]
script = ExtResource("1_vp5ry")

[node name="Ball" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0)
material_override = SubResource("StandardMaterial3D_yk8ee")
mesh = SubResource("QuadMesh_vp5ry")

[node name="OmniLight3D" type="OmniLight3D" parent="Ball"]
light_energy = 4.0
omni_range = 1.0

[node name="GPUParticles3D" type="GPUParticles3D" parent="Ball"]
material_override = SubResource("StandardMaterial3D_vp5ry")
amount = 20
process_material = SubResource("ParticleProcessMaterial_dssvg")
draw_pass_1 = SubResource("QuadMesh_h2ql6")

[node name="Area3D" type="Area3D" parent="Ball"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ball/Area3D"]
shape = SubResource("SphereShape3D_dssvg")

[node name="Ball2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0)
material_override = SubResource("StandardMaterial3D_dssvg")
mesh = SubResource("QuadMesh_hovb4")

[node name="OmniLight3D" type="OmniLight3D" parent="Ball2"]
light_energy = 4.0
omni_range = 1.0

[node name="GPUParticles3D2" type="GPUParticles3D" parent="Ball2"]
material_override = SubResource("StandardMaterial3D_vp5ry")
amount = 20
process_material = SubResource("ParticleProcessMaterial_dssvg")
draw_pass_1 = SubResource("QuadMesh_h2ql6")

[node name="Area3D" type="Area3D" parent="Ball2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ball2/Area3D"]
shape = SubResource("SphereShape3D_dssvg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_j7aad")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="Ball/Area3D" to="." method="_enemy_near"]
[connection signal="body_exited" from="Ball/Area3D" to="." method="_enemy_out"]
[connection signal="body_entered" from="Ball2/Area3D" to="." method="_enemy_near"]
[connection signal="body_exited" from="Ball2/Area3D" to="." method="_enemy_out"]
